# AI-Data-Test-Generator

synthtest-ai/: README.md  pyproject.toml
synthtest-ai/docs/: architecture.drawio  architecture.md  cli.md  config-spec.md  security-and-pii.md  validation-and-metrics.md
synthtest-ai/examples/: ecommerce.yml
synthtest-ai/synthtest/: cli.py
synthtest-ai/synthtest/config/: loader.py  models.py
synthtest-ai/synthtest/export/: csv_exporter.py  json_exporter.py  sql_exporter.py
synthtest-ai/synthtest/plan/: dependency_graph.py  planner.py
synthtest-ai/synthtest/profile/: infer_basic.py
synthtest-ai/synthtest/schema/: canonical.py  dsl.py  postgres_introspect.py
synthtest-ai/synthtest/util/: hashing.py  logging.py  rng.py  safe_expr.py
synthtest-ai/synthtest/validate/: pii_guard.py  report.py  validator.py
synthtest-ai/synthtest_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
synthtest-ai/tests/integration/: test_generate_flow.py
synthtest-ai/tests/unit/: test_generators.py  test_planner.py  test_validator.py
synthtest-ai/ui/: README.md  app.js  index.html  styles.css
